@@ -146,6 +146,7 @@ inline char *strreplacei(char *s, const char *s1, const char s2)
 
 void sleepMSec(long ms);
 void sleepSec(long s);
+void WaitVDRReady();
 bool SendViaSVDRP(cString SVDRPcmd);
 int SendMsg(cString Message, bool confirm = false, int seconds = 0, eMessageType messageType = mtInfo);
 bool InEditMode(const char* ItemText, const char* ItemName, const char* ItemValue);
